# GameRecommendationApp

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.yml  mkdocs.yml  pyproject.toml  requirements.txt  tree.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
config/: local.yml
data/: .gitignore
docs/: HLD.md  LLD.md  MRD.md  PRD.md  index.md
notebooks/: 01_eda.ipynb  BGG_data_validation.ipynb  board-games-geek_POC.ipynb  boardgamesgeek-game-recommender-system.ipynb  glove_model_unzipped.txt  streamlit_poc.py
src/data/: __init__.py  loader.py  preprocessor.py
src/models/: base.py  collaborative_filter.py  hybrid_recommender.py  rag_recommender.py  trainer.py
src/recsys/config_management/: load_config.py
src/recsys/data/: __init__.py  extract.py  loader.py  preprocessor.py  scraper.py
src/recsys/logging/: app_logger.py
src/recsys/logging/logging_backends/: __init__.py  default_logger.py
src/recsys/scripts/: __init__.py  generate_db_schema.py  load_config.py  setup_snowflake_db.py  snowflake_db_setup.sql
src/recsys/tracking/: interaction_tracker.py
src/recsys/utils/: cache.py  clustering.py  distance_metrics.py  paths.py
src/scripts/: generate_db_schema.py
