[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "black>=25.11.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "ipynb>=0.5.1",
    "kaggle>=1.7.4.5",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "ty>=0.0.1a26",
    "uvicorn>=0.38.0",
]
